# bram-rythm-editor

./: README.md  index.html  package.json
src/: main.ts  maths.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
