[package]
name = "bram-rythm-editor"
version = "1.0.0"
description = "A Tauri App"
authors = ["WatzTheLeaf <watztheleaf@pm.me>"]
edition = "2021"

[lib]
name = "bram_rythm_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
bram-audio-parser = { git = "https://github.com/watztheleaf/bram-audio-parser", tag = "v1.1.0"}
bram-input-exporter = { git = "https://github.com/watztheleaf/bram-input-exporter", tag = "v1.0.0"}
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22.1"
tauri-plugin-os = "2"
